cmake_minimum_required(VERSION 3.17)
project(Interfaces_inheritance_fabric_method)

set(CMAKE_CXX_STANDARD 20)

add_executable(Interfaces_inheritance_fabric_method main.cpp dump.cpp dump.h factory.cpp factory.h grep.cpp grep.h parser.cpp parser.h readfile.cpp readfile.h replace.cpp replace.h sort.cpp sort.h worker.cpp worker.h writefile.cpp writefile.h)